# superset

./: .dockerignore  .rat-excludes
.devin/: README.md  SESSION_NOTES.md  flatten-tests.json
.github/workflows/: flatten-tests.yml
docker/flatten-tests/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
docker/flatten-tests/flatten_tests/: detector.py  devin_client.py  main.py  models.py  slack_client.py
docker/flatten-tests/tests/: test_detector.py  test_devin_client.py  test_integration.py  test_slack_client.py
superset-frontend/src/visualizations/TimeTable/utils/sortUtils/: sortUtils.test.ts
